[package]
name = "lunardate"
version = "0.1.4"
authors = ["messense <messense@icloud.com>"]
description = "A Chinese Calendar Library in Rust"
keywords = ["chinese", "calendar", "lunar"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/messense/rust-lunardate"

[dependencies]
chrono = "0.4"
lazy_static = "1.0"
