[package]
name = "lunardate"
version = "0.2.1"
authors = ["messense <messense@icloud.com>"]
description = "A Chinese Calendar Library in Rust"
edition = "2018"
keywords = ["chinese", "calendar", "lunar"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/messense/rust-lunardate"

[dependencies]
chrono = { version = "0.4.23", default-features = false, features = ["std", "clock"] }
lazy_static = "1.0"
